リファクタリングとctrl+z,ctrl+yの動作を追加